Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myexpressapp
spec:
  replicas: 5
  selector:
    matchLabels:
      app: myexpressapp
  template:
    metadata:
      labels:
        app: myexpressapp
    spec:
      containers:
      - name: myexpressapp
        image: docker.io/klotzt/myexpressapp:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
